Solve 05
HTML and CSS in problem 05 was made modal overlap and look poor.
Fix code to make modal intuitive.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,8 +20,28 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding:10px;
+  gap: 10px;
 }
 
+
+
+.top-row{
+  display: flex;
+  justify-content: space-between;
+}
+
+.header{
+  font-size: larger;
+  font-weight: bold;
+}
+
+.rest-container{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
